--- a/coaches/templates/coaches/agregar_jugadora.html
+++ b/coaches/templates/coaches/agregar_jugadora.html
@@ -15,63 +15,63 @@
         <span>Agregar Foto</span>
       </div>
       <div class="absolute-icons">
-          {{ form.Imagen }}
+          {{ form.imagen }}
       </div>
     </div>
-    {{ form.Imagen.errors }}
+    {{ form.imagen.errors }}
   </div>
   <div class="form-column">
       <p>
         <label>
-          {{ form.Nombre.label_tag }}
+          {{ form.nombre.label_tag }}
         </label>
-        {{ form.Nombre }}
+        {{ form.nombre }}
       </p>
-      {{ form.Nombre.errors }}
+      {{ form.nombre.errors }}
       <p>
         <label>
-          {{ form.Apellido.label_tag }}
+          {{ form.apellido.label_tag }}
         </label>
-        {{ form.Apellido }}
+        {{ form.apellido }}
       </p>
-      {{ form.Apellido.errors }}
+      {{ form.apellido.errors }}
       <p>
         <label>
-          {{ form.Nacimiento.label_tag }}
+          {{ form.nacimiento.label_tag }}
         </label>
-        {{ form.Nacimiento }}
+        {{ form.nacimiento }}
       </p>
-      {{ form.Nacimiento.errors }}
+      {{ form.nacimiento.errors }}
       <p>
         <label>
-          {{ form.Numero.label_tag }}
+          {{ form.numero.label_tag }}
         </label>
-        {{ form.Numero }}
+        {{ form.numero }}
       </p>
-      {{ form.Numero.errors }}
+      {{ form.numero.errors }}
       <p>
         <label>
-          {{ form.Posicion.label_tag }}
+          {{ form.posicion.label_tag }}
         </label>
-        {{ form.Posicion }}
+        {{ form.posicion }}
       </p>
-      {{ form.Posicion.errors }}
+      {{ form.posicion.errors }}
 
       <p>
         <label>
-          {{ form.NumPoliza.label_tag }}
+          {{ form.num_poliza.label_tag }}
         </label>
-        {{ form.NumPoliza }}
+        {{ form.num_poliza }}
       </p>
-      {{ form.NumPoliza.errors }}
+      {{ form.num_poliza.errors }}
 
       <p>
         <label>
-          {{ form.NUI.label_tag }}
+          {{ form.nui.label_tag }}
         </label>
-        {{ form.NUI }}
+        {{ form.nui }}
       </p>
-      {{ form.NUI.errors }}
+      {{ form.nui.errors }}
 
       {% if equipo == '' %}
           <p>
@@ -96,11 +96,11 @@
 
       <p>
         <label>
-          {{ form.Notas.label_tag }}
+          {{ form.notas.label_tag }}
         </label>
-        {{ form.Notas }}
+        {{ form.notas }}
       </p>
-      {{ form.Notas.errors }}
+      {{ form.notas.errors }}
 
 
 
