--- a/jugadora/templates/jugadora/editar_jugadora.html
+++ b/jugadora/templates/jugadora/editar_jugadora.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block main %}
 <div class="title-container">
-  <h2>Editar Jugadora<h2>
+  <h2>Editar Jugadora</h2>
 </div>
 <form class="container flex" method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:editar_jugadora' jugadora.id %}">
   {% csrf_token %}
@@ -22,47 +22,47 @@
         <span>Cambiar Foto</span>
       </div>
       <div class="absolute-icons">
-          {{ form.Imagen }}
+          {{ form.imagen }}
       </div>
     </div>
-    {{ form.Imagen.errors }}
+    {{ form.imagen.errors }}
   </div>
   <div class="form-column">
       <p>
         <label>
-          {{ form.Nombre.label_tag }}
+          {{ form.nombre.label_tag }}
         </label>
-        {{ form.Nombre }}
+        {{ form.nombre }}
       </p>
-      {{ form.Nombre.errors }}
+      {{ form.nombre.errors }}
       <p>
         <label>
-          {{ form.Apellido.label_tag }}
+          {{ form.apellido.label_tag }}
         </label>
-        {{ form.Apellido }}
+        {{ form.apellido }}
       </p>
-      {{ form.Apellido.errors }}
+      {{ form.apellido.errors }}
       <p>
         <label>
-          {{ form.Nacimiento.label_tag }}
+          {{ form.nacimiento.label_tag }}
         </label>
-          <input type="date" name="{{form.Nacimiento.html_name}}" required="" value='{{form.Nacimiento.value|date:"Y-m-d"}}'   id="{{form.Nacimiento.id_for_label}}" class="datepicker">
+          <input type="date" name="{{form.nacimiento.html_name}}" required="" value='{{form.Nacimiento.value|date:"Y-m-d"}}'   id="{{form.Nacimiento.id_for_label}}" class="datepicker">
       </p>
-      {{ form.Nacimiento.errors }}
+      {{ form.nacimiento.errors }}
       <p>
         <label>
-          {{ form.Numero.label_tag }}
+          {{ form.numero.label_tag }}
         </label>
-        {{ form.Numero }}
+        {{ form.numero }}
       </p>
-      {{ form.Numero.errors }}
+      {{ form.numero.errors }}
       <p>
         <label>
-          {{ form.Posicion.label_tag }}
+          {{ form.posicion.label_tag }}
         </label>
-        {{ form.Posicion }}
+        {{ form.posicion }}
       </p>
-      {{ form.Posicion.errors }}
+      {{ form.posicion.errors }}
       <p>
           <label>
               {{ form.equipo.label_tag }}
@@ -72,11 +72,11 @@
            {{ form.equipo.errors }}
       <p>
         <label>
-          {{ form.Notas.label_tag }}
+          {{ form.notas.label_tag }}
         </label>
-        {{ form.Notas }}
+        {{ form.notas }}
       </p>
-      {{ form.Notas.errors }}
+      {{ form.notas.errors }}
     <div class="container-button">
       <a href="{% url 'jugadora:ver_jugadoras' %}" class="cancel">Cancelar</a>
       <button class="submit" type="submit">Enviar</button>
