--- a/landing/templates/landing/detalle_equipo.html
+++ b/landing/templates/landing/detalle_equipo.html
@@ -175,14 +175,14 @@
         <a href="{% url 'landing:detalle_jugadora' equipo.id jugadora.id %}">
           <div class="card-image">
             {% if jugadora.Imagen %}
-              <img src="{{ jugadora.Imagen.url }}" alt="{{jugadora.Nombre}} imagen" class="circle"/>
+              <img src="{{ jugadora.Imagen.url }}" alt="{{jugadora.nombre}} imagen" class="circle"/>
             {% else %}
-              <img src="{% static 'static_media/default.jpg' %}" alt="{{jugadora.Nombre}} imagen" class="circle"/>
+              <img src="{% static 'static_media/default.jpg' %}" alt="{{jugadora.nombre}} imagen" class="circle"/>
             {% endif %}
           </div>
           <div class="card-content">
-            <h6 class="title"><strong>{{jugadora.Nombre}} {{jugadora.Apellido}}</strong></h6>
-            <p>#{{jugadora.Numero}}</p>
+            <h6 class="title"><strong>{{jugadora.nombre}} {{jugadora.apellido}}</strong></h6>
+            <p>#{{jugadora.numero}}</p>
             <p>{{jugadora.get_Posicion_display}}</p>
           </div>
         </a>
