--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -71,10 +71,10 @@
         {% else %}
           <img src="{% static 'static_media/default.jpg' %}" alt="" class="circle" />
         {% endif %}
-        <span class="title">{{ jugadora.Nombre}} {{ jugadora.Apellido }}</span>
-        <p><strong>Fecha de nacimiento:</strong> {{ jugadora.Nacimiento }}</p>
+        <span class="title">{{ jugadora.nombre}} {{ jugadora.apellido }}</span>
+        <p><strong>Fecha de nacimiento:</strong> {{ jugadora.nacimiento }}</p>
         <div class="flex">
-          <p><strong>Número:</strong> {{ jugadora.Numero }}</p>&nbsp;&nbsp;
+          <p><strong>Número:</strong> {{ jugadora.numero }}</p>&nbsp;&nbsp;
           <p><strong>Posición:</strong> {{ jugadora.get_Posicion_display }}</p>
         </div>
         <div class="secondary-content">
@@ -90,8 +90,8 @@
         <form action="{% url 'equipo:eliminar_jugadora' equipo.id jugadora.id %}" method="post">
           {% csrf_token %}
           <div class="modal-content">
-            <h4>Eliminar {{ jugadora.Nombre }}</h4>
-            <p>Esta seguro de que quiere eliminar "{{ jugadora.Nombre }}" del equipo {{ equipo.nombre}}?</p>
+            <h4>Eliminar {{ jugadora.nombre }}</h4>
+            <p>Esta seguro de que quiere eliminar "{{ jugadora.nombre }}" del equipo {{ equipo.nombre}}?</p>
           </div>
           <div class="modal-footer">
             <button id="cancel" type="button" class="modal-action modal-close waves-effect cancel cancel-delete" data-target="delete">Cancelar</button>
