--- a/administrador/templates/administrador/editar_administrador.html
+++ b/administrador/templates/administrador/editar_administrador.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block main %}
 
+<!-- US5 Yo como super-administrador quiero actualizar un administrador -->
 <div class="container">
     <form method="POST" action=".">
         {% csrf_token %}
