--- a/administrador/templates/administrador/lista_administrador.html
+++ b/administrador/templates/administrador/lista_administrador.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block main %}
 
+<!-- US4 Yo como super-administrador quiero visualizar un administrador -->
 <div class="container">
     <ul class="collection">
         {% for administrador in lista %}
