--- a/equipo/templates/equipo/agregar_equipo.html
+++ b/equipo/templates/equipo/agregar_equipo.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
+<!-- US15 Yo como administrador quiero registrar un equipo -->
+
 <div class="title-container">
   <h2>Agregar Equipo<h2>
 </div>
