--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,6 +15,7 @@
         <li><a href="{% url 'administrador:lista_administrador' %}">ADMINISTRADORES</a></li>
         <li><a href="{% url 'administrador:lista_PreRegistro' %}">SOLICITUDES</a></li>
         {% endif %}
+        <!-- US2 Yo como administrador quiero cerrar sesión -->
         <li><a href="{% url 'logout' %}"><i class="material-icons">exit_to_app</i></a></li>
       </ul>
       </div>
