--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
+<!-- US1 Yo como administrador quiero iniciar sesión -->
 <html lang="es">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
