--- a/torneo/templates/torneo/torneo_detail.html
+++ b/torneo/templates/torneo/torneo_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
+<!-- US8 Yo como administrador quiero visualizar un torneo -->
+<!-- US12 Yo como administrador quiero visualizar una convocatoria -->
 
 <div class="title-container">
   <h2>Información de Torneo</h2>
