--- a/torneo/templates/torneo/torneo_confirm_delete.html
+++ b/torneo/templates/torneo/torneo_confirm_delete.html
@@ -1,11 +1,18 @@
+<!-- US9 Yo como administrador quiero actualizar un torneo -->
+<!-- US14 Yo como administrador quiero eliminar una convocatoria -->
+
 <form action="{% url 'torneo:eliminar_torneo' torneo.id %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="modal-content">
     <h4>Eliminar Torneo</h4>
     <p>Esta seguro de que desea eliminar el Torneo {{torneo.nombre}}</p>
   <div class="modal-footer">
-    <button id="cancel" type="button" class="cancel cancel-delete" data-target="delete">Cancelar</button>
-    <button class="delete-color" style="background-color: #F19800" type="submit">Eliminar</button>
+    <button id="cancel" type="button" class="cancel cancel-delete" data-target="delete">
+      Cancelar
+    </button>
+    <button class="delete-color" style="background-color: #F19800" type="submit">
+      Eliminar
+    </button>
 </form>
 <script>
 $("#cancel").click(function() {
