--- a/templates/503.html
+++ b/templates/503.html
@@ -10,15 +10,15 @@
   <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}" />
   <link rel="stylesheet" href="{% static 'css/landing.css' %}" />
   <link rel="stylesheet" href="{% static 'css/error.css' %}" />
-  <title>403</title>
+  <title>503</title>
 </head>
 
 <body>
   <div class="container">
     <div class="content flex">
       <div class="col">
-        <h1>403</h1>
-        <p>Lo sentimos acceso denegado.</p>
+        <h1>503</h1>
+        <p>Lo sentimos el servidor no puede responder tu petición.</p>
         <a href="/">
           <div class="secondary-button button">
             Regresar al inicio
