Consultar asistencia de una jugadora en el torneo.

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 {% load static %}
-  <nav>
+  <nav id="navbar">
     <div class="nav-wrapper">
       <div class="navito">
       <a href="{% url 'equipo:welcome' %}" class="brand-logo">
