--- a/torneo/templates/torneo/registrar_eventos.html
+++ b/torneo/templates/torneo/registrar_eventos.html
@@ -47,8 +47,10 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
 <script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+<script type="text/javascript" src="{% static '/index.js' %}"></script>
 <script>
     $(document).ready(function(){
+        document.getElementById("navbar").style.display = "none" ;
         var csrftoken = $.cookie('csrftoken');
         function csrfSafeMethod(method) {
         // these HTTP methods do not require CSRF protection
