--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -75,7 +75,7 @@
         <p><strong>Fecha de nacimiento:</strong> {{ jugadora.nacimiento }}</p>
         <div class="flex">
           <p><strong>Número:</strong> {{ jugadora.numero }}</p>&nbsp;&nbsp;
-          <p><strong>Posición:</strong> {{ jugadora.get_Posicion_display }}</p>
+          <p><strong>Posición:</strong> {{ jugadora.get_posicion_display }}</p>
         </div>
         <div class="secondary-content">
           <a class="modal-trigger delete-button" href="#borrarJugadorEquipoModal{{ jugadora.id}}">
