--- a/torneo/templates/torneo/CedulaPDF_template.html
+++ b/torneo/templates/torneo/CedulaPDF_template.html
@@ -138,8 +138,8 @@ body{
                 {% for jugadora in partido.equipo_local.jugadoras.all %}
                     <tr>
                     <td></td>
-                    <td>{{ jugadora.Numero }}</td>
-                    <td><p>{{ jugadora.Nombre }} {{ jugadora.Apellido }}</p></td>
+                    <td>{{ jugadora.numero }}</td>
+                    <td><p>{{ jugadora.nombre }} {{ jugadora.apellido }}</p></td>
                     <td></td>
                     <td></td><td></td>
 
@@ -167,8 +167,8 @@ body{
                 {% for jugadora in partido.equipo_visitante.jugadoras.all %}
                      <tr>
                     <td></td>
-                    <td>{{ jugadora.Numero }}</td>
-                    <td><p>{{ jugadora.Nombre }} {{ jugadora.Apellido }}</p></td>
+                    <td>{{ jugadora.numero }}</td>
+                    <td><p>{{ jugadora.nombre }} {{ jugadora.apellido }}</p></td>
                     <td></td>
                     <td></td>
                     <td></td>
