--- a/landing/templates/landing/detalle_jugadora.html
+++ b/landing/templates/landing/detalle_jugadora.html
@@ -17,7 +17,7 @@
     </div>
     <div class="info-column">
       <h2>{{ jugadora.nombre }} {{ jugadora.apellido }}</h2>
-      <h6><strong>Posición: </strong>{{jugadora.get_Posicion_display}}</h6>
+      <h6><strong>Posición: </strong>{{jugadora.get_posicion_display}}</h6>
       <h6><strong>Edad: </strong>{{edad}} años</h6>
       <h6><strong>Número: </strong>{{jugadora.numero}}</h6>
       <h6><strong>Equipo: </strong>{{equipo.nombre}}</h6>
